--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/lodash": "^4.14.162",
+    "@types/react-bootstrap": "^0.32.24",
+    "bootstrap": "^4.5.3",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-countdown": "^2.3.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
